# midnight-batcher

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  metadata.scale
local-chain-setup/: .envrc  docker-compose-0.7.0.yml  docker-compose.yml  index.ts  package-lock.json  package.json  seed  tsconfig.json
local-chain-setup/midnight-static-dir/zswap/compiler/: contract-info.json
local-chain-setup/midnight-static-dir/zswap/contract/: index.cjs  index.cjs.map  index.d.cts
local-chain-setup/midnight-static-dir/zswap/keys/: output.verifier  sign.verifier  spend.verifier
local-chain-setup/midnight-static-dir/zswap/zkir/: output.bzkir  output.zkir  sign.bzkir  sign.zkir  spend.bzkir  spend.zkir
src/: balancing.rs  db.rs  endpoints.rs  main.rs  preproofing.rs  utils.rs  whitelisting.rs
