[package]
name = "midnight-graphql-subscription"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures = "0.3"
serde_json = "1.0"
url = "2.2"
hex = "0.4.3"
rand = { version = "^0.8.4", features = ["getrandom"] }
rand_chacha = "^0.3.1"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.93"
serde = { version = "1.0.215", features = ["derive"] }
subxt = "0.38.0"
subxt-signer = "0.38.0"
clap = "4.5.27"
rocket = { version = "0.5.1", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

midnight-zswap = { path = "../midnight-ledger-prototype/zswap", features = ["offer-construction"] }
midnight-ledger = { path = "../midnight-ledger-prototype/ledger", features = ["transaction-construction", "verifying", "serde", "transaction-semantics", "proving"] }
midnight-base-crypto = { path = "../midnight-ledger-prototype/base-crypto" }

midnight-transient-crypto = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", package = "midnight-transient-crypto" }


[patch.'https://github.com/input-output-hk/midnight-ledger-prototype']
midnight-ledger = { path = "../midnight-ledger-prototype/ledger" }
midnight-zswap = { path = "../midnight-ledger-prototype/zswap" }
midnight-base-crypto = { path = "../midnight-ledger-prototype/base-crypto" }
midnight-transient-crypto = { path = "../midnight-ledger-prototype/transient-crypto" }

[patch.'https://github.com/input-output-hk/midnight-foundations']
coin-structure = { path = "../midnight-foundations/coin-structure", package = "midnight-coin-structure" }
# base-crypto = { path = "../midnight-foundations/base-crypto", package = 'midnight-base-crypto' }
serialize = { path = "../midnight-foundations/serialize", package = 'midnight-serialize' }

[patch.'https://github.com/input-output-hk/compactc']
midnight-onchain-runtime = { path = "../compactc/midnight-onchain-runtime" } 

[dependencies.rusqlite]
version = "0.32.0"
features = ["bundled"]
