[package]
name = "midnight-batcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures = "0.3"
serde_json = "1.0"
url = "2.2"
hex = "0.4.3"
rand = { version = "^0.8.4", features = ["getrandom"] }
rand_chacha = "^0.3.1"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.93"
serde = { version = "1.0.215", features = ["derive"] }
subxt = "0.38.0"
subxt-signer = "0.38.0"
clap = "4.5.27"
rocket = { version = "0.5.1", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rocket_cors = "0.6.0"

midnight-zswap = { path = "./midnight-ledger-prototype/zswap", features = ["offer-construction"] }
midnight-ledger = { path = "./midnight-ledger-prototype/ledger", features = ["transaction-construction", "verifying", "serde", "transaction-semantics", "proving"] }
midnight-transient-crypto = { path = "./midnight-ledger-prototype/transient-crypto", package = "midnight-transient-crypto" }
sha256 = "1.5.0"
deadpool-sqlite = "0.10.0"

# midnight-base-crypto = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", rev = "base-crypto-0.4" }

# [patch.'https://github.com/input-output-hk/midnight-ledger-prototype']
# midnight-ledger = { path = "./midnight-ledger-prototype/ledger" }
# midnight-zswap = { path = "./midnight-ledger-prototype/zswap" }
# midnight-transient-crypto = { path = "./midnight-ledger-prototype/transient-crypto" }

[build-dependencies]
toml_edit = "0.22.23"

# midnight-base-crypto = { path = "../midnight-ledger-prototype/base-crypto" }

[dependencies.rusqlite]
version = "0.33.0"
features = ["bundled"]
